# ha-custom-heater

./: .gitignore  LICENSE  README.md  SPEC.md  hacs.json  pyproject.toml  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
custom_components/chauffage_intelligent/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  select.py  sensor.py  services.yaml  strings.json
custom_components/chauffage_intelligent/translations/: fr.json
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_calendar_parsing.py  test_climate.py  test_config_flow.py  test_derivative.py  test_init.py  test_learning.py  test_mode_resolution.py  test_preheat.py  test_select.py  test_sensor.py  test_temperature_sensor.py
